--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -140,5 +140,8 @@
   <ItemGroup>
     <None Include="Resources\beam.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\neck_snap-Vladimir-719669812.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
